// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CityPicker renders correctly 1`] = `
<div
  class="kd-city-picker-container"
>
  <div
    class="kd-city-picker-content"
  >
    <input
      class="kd-city-picker-input"
      title=""
      type="text"
      value=""
    />
    <span
      class="kd-city-picker-info"
    />
    <i
      class="kdicon kdicon-arrow-down kd-city-picker-arrow"
    />
  </div>
</div>
`;

exports[`CityPicker renders correctly with no child 1`] = `
<CityPicker>
  <div
    className="kd-city-picker-container"
    onClick={[Function]}
  >
    <div
      className="kd-city-picker-content"
    >
      <input
        className="kd-city-picker-input"
        onChange={[Function]}
        onFocus={[Function]}
        title=""
        type="text"
        value=""
      />
      <span
        className="kd-city-picker-info"
      />
      <i
        className="kdicon kdicon-arrow-down kd-city-picker-arrow"
      />
    </div>
  </div>
</CityPicker>
`;

exports[`CityPicker renders correctly with null or undefined 1`] = `
<CityPicker>
  <div
    className="kd-city-picker-container"
    onClick={[Function]}
  >
    <div
      className="kd-city-picker-content"
    >
      <input
        className="kd-city-picker-input"
        onChange={[Function]}
        onFocus={[Function]}
        title=""
        type="text"
        value=""
      />
      <span
        className="kd-city-picker-info"
      />
      <i
        className="kdicon kdicon-arrow-down kd-city-picker-arrow"
      />
    </div>
  </div>
</CityPicker>
`;
